--- a/assets/style.css
+++ b/assets/style.css
@@ -62,12 +62,13 @@ a:hover {
   font-size: 18px;
 }
 .container__item-list {
-  column-count: 5;
-  column-gap: 15px;
-  column-fill: balance;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 .container__item-list a {
   display: block;
   width: max-content;
+  word-break: break-all;
   margin: 0 0 8px;
 }
